<resources>
    <string name="app_name">Poster Generator</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="presets">Presets</string>
    <string name="settings">Settings</string>
    <string name="poster_generator">Poster Generator</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="placeholder_space">P L A C E H O L D E R</string>
    <string name="input_text_here">Input Text Here</string>
    <string name="save_image">Save Image</string>
    <string name="camera">Camera</string>
    <string name="file_image">From File</string>
    <string name="image">IMAGE</string>
    <string name="set_title">SET TITLE</string>
    <string name="set_quote">SET QUOTE</string>
    <string-array name="quotes">
        <item>When you reach the end of your rope, tie a knot in it and hang on.</item>
        <item>There is nothing permanent except change.</item>
        <item>You cannot shake hands with a clenched fist.</item>
        <item>Learning never exhausts the mind.</item>
        <item>Start each day with a positive thought and a grateful heart.</item>
        <item>Today is your day. Your mountain is waiting so get on your way.</item>
        <item>Light tomorrow with today.</item>
        <item>Yesterday is not ours to recover, but tomorrow is ours to win or lose.</item>
        <item>When it rains, it pours? but soon, the sun shines again. Stay positive. Better days are on their way.</item>
        <item>Learn the rules like a pro, so you can break them like an artist.</item>
        <item>Never give up on a dream just because of the time it will take to accomplish it. The time will pass anyway.</item>
        <item>Just one small positive thought in the morning can change your whole day.</item>
        <item>Push yourself because no one else is going to do it for you.</item>
        <item>Yesterday is not ours to recover, but tomorrow is ours to win or lose.</item>
        <item>Every object, every being, is a jar of delight. Be a connoisseur.</item>
        <item>Yesterday’s home runs don’t win today’s games.</item>
        <item>Someday is not a say of the week.</item>
        <item>You’re off to great places, today is your day. Your mountain is waiting, so get on your way.</item>
        <item>Don’t count the days, make the days count.</item>
        <item>Make each day your masterpiece.</item>
        <item>You’re braver than you believe and stronger than you seem, and smarter than you think.</item>
        <item>Wonder is the beginning of wisdom.</item>
        <item>How wonderful it is that nobody need wait a single moment before starting to improve the world.</item>
        <item>Believe you can and you’re halfway there.</item>
        <item>Don’t judge each day by the harvest you reap but by the seeds that you plant.</item>
        <item>Every day, there are 1,440 minutes. That means we have 1,440 daily opportunities to make a positive impact.</item>
        <item>You’ve got to get up every morning with determination if you’re going to go to bed with satisfaction.</item>
        <item>When you want something, all the universe conspires in helping you to achieve it.</item>
        <item>Keep your face to the sunshine and you cannot see a shadow.</item>
        <item>Be thankful for everything that happens in your life; it’s all an experience.</item>
        <item>If you think you are too small to make a difference, try sleeping with a mosquito.</item>
        <item>Just don’t give up trying to do what you really want to do. Where there are love and inspiration, I don’t think you can go wrong.</item>
        <item>Stay positive in every situation and everything you do, never stop trying, have faith don’t stop due to failure.</item>
        <item>One of the lessons that I grew up with was to always stay true to yourself and never let what somebody else says distract you from your goals.</item>
        <item>Be mindful. Be grateful. Be positive. Be true. Be kind.</item>
        <item>Life is a shipwreck but we must not forget to sing in the lifeboats.</item>
        <item> No one is perfect that’s why pencils have erasers.</item>
        <item>If everything seems under control, you’re not going fast enough.</item>
        <item>Do the one thing you think you cannot do. Fail at it. Try again. Do better the second time. The only people who never tumble are those who never mount the high wire.</item>
        <item>When one door of happiness closes, another opens.</item>
        <item>If you are working on something exciting that you really care about, you don’t have to be pushed. The vision pulls you.</item>
        <item>Optimism is a happiness magnet. If you stay positive good things and good people will be drawn to you.</item>
        <item>Things may come to those who wait, but only the things left by those who hustle.</item>
        <item>Every action in our lives touches on some chord that will vibrate in eternity.</item>
        <item>Out of clutter, find simplicity. From discord, find harmony. In the middle of difficulty lies opportunity.</item>
        <item>Optimism is a happiness magnet. If you stay positive, good things and good people will be drawn to you.</item>
        <item>Dwell on the beauty of life. Watch the stars, and see yourself running with them.</item>
        <item>Life is 10% what happens to us and 90% how we react to it.</item>
        <item>Make improvements, not excuses. Seek respect, not attention.</item>
        <item>Keep away from people who try to belittle your ambitions. Small people always do that, but the really great make you feel that you, too, can become great.</item>
        <item>Success is not final; failure is not fatal: It is the courage to continue that counts.</item>
        <item>It is better to fail in originality than to succeed in imitation.</item>
        <item>In any moment of decision, the best thing you can do is the right thing. The worst thing you can do is nothing.</item>
        <item>Reach high, for stars lie hidden in your soul. Dream deep, for every dream, precedes the goal.</item>
        <item>We must all face the choice between what is right and what is easy.</item>
    </string-array>
    <string name="automatic_spacing_for_title">Automatic Spacing for Title</string>
    <string name="show_line">Show Line</string>
    <string name="center_crop">Center Crop</string>
    <string name="background_color">Background Color:</string>
    <string name="file_type">File Type:</string>
    <string name="custom_image_goes_here">Custom image goes here!</string>
</resources>