<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseActivity">

    <item
        android:id="@+id/action_postergenerator"
        android:orderInCategory="1"
        android:title="@string/poster_generator"
        android:icon="@drawable/ic_baseline_image_24"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_presets"
        android:orderInCategory="10"
        android:title="@string/presets"
        android:icon="@drawable/ic_baseline_clipboard_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="20"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" />
</menu>